// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integrations/InstalledCommand should call onDelete function 1`] = `
<div
  className="backstage-list__item"
>
  <div
    className="item-details"
  >
    <div
      className="item-details__row d-flex flex-column flex-md-row justify-content-between"
    >
      <div>
        <strong
          className="item-details__name"
        >
          display_name
        </strong>
        <span
          className="item-details__trigger"
        >
          - /trigger auto_complete_hint
        </span>
      </div>
      <div
        className="item-actions"
      >
        <button
          className="style--none color--link"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Regenerate Token"
            id="installed_integrations.regenToken"
          />
        </button>
         - 
        <Link
          to="/team_name/integrations/commands/edit?id=r5tpgt4iepf45jt768jz84djic"
        >
          <FormattedMessage
            defaultMessage="Edit"
            id="installed_integrations.edit"
          />
        </Link>
         - 
        <DeleteIntegration
          messageId="installed_commands.delete.confirm"
          onDelete={[Function]}
        />
      </div>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__description"
      >
        description
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__token"
      >
        <FormattedMessage
          defaultMessage="Token: {token}"
          id="installed_integrations.token"
          values={
            Object {
              "token": "testToken",
            }
          }
        />
        <CopyText
          defaultMessage="Copy"
          idMessage="integrations.copy"
          value="testToken"
        />
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__creation"
      >
        <FormattedMessage
          defaultMessage="Created by {creator} on {createAt, date, full}"
          id="installed_integrations.creation"
          values={
            Object {
              "createAt": "1499722850203",
              "creator": "username",
            }
          }
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`components/integrations/InstalledCommand should call onRegenToken function 1`] = `
<div
  className="backstage-list__item"
>
  <div
    className="item-details"
  >
    <div
      className="item-details__row d-flex flex-column flex-md-row justify-content-between"
    >
      <div>
        <strong
          className="item-details__name"
        >
          display_name
        </strong>
        <span
          className="item-details__trigger"
        >
          - /trigger auto_complete_hint
        </span>
      </div>
      <div
        className="item-actions"
      >
        <button
          className="style--none color--link"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Regenerate Token"
            id="installed_integrations.regenToken"
          />
        </button>
         - 
        <Link
          to="/team_name/integrations/commands/edit?id=r5tpgt4iepf45jt768jz84djic"
        >
          <FormattedMessage
            defaultMessage="Edit"
            id="installed_integrations.edit"
          />
        </Link>
         - 
        <DeleteIntegration
          messageId="installed_commands.delete.confirm"
          onDelete={[Function]}
        />
      </div>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__description"
      >
        description
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__token"
      >
        <FormattedMessage
          defaultMessage="Token: {token}"
          id="installed_integrations.token"
          values={
            Object {
              "token": "testToken",
            }
          }
        />
        <CopyText
          defaultMessage="Copy"
          idMessage="integrations.copy"
          value="testToken"
        />
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__creation"
      >
        <FormattedMessage
          defaultMessage="Created by {creator} on {createAt, date, full}"
          id="installed_integrations.creation"
          values={
            Object {
              "createAt": "1499722850203",
              "creator": "username",
            }
          }
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`components/integrations/InstalledCommand should filter out command 1`] = `""`;

exports[`components/integrations/InstalledCommand should match snapshot 1`] = `
<div
  className="backstage-list__item"
>
  <div
    className="item-details"
  >
    <div
      className="item-details__row d-flex flex-column flex-md-row justify-content-between"
    >
      <div>
        <strong
          className="item-details__name"
        >
          display_name
        </strong>
        <span
          className="item-details__trigger"
        >
          - /trigger auto_complete_hint
        </span>
      </div>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__description"
      >
        description
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__token"
      >
        <FormattedMessage
          defaultMessage="Token: {token}"
          id="installed_integrations.token"
          values={
            Object {
              "token": "testToken",
            }
          }
        />
        <CopyText
          defaultMessage="Copy"
          idMessage="integrations.copy"
          value="testToken"
        />
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__creation"
      >
        <FormattedMessage
          defaultMessage="Created by {creator} on {createAt, date, full}"
          id="installed_integrations.creation"
          values={
            Object {
              "createAt": "1499722850203",
              "creator": "username",
            }
          }
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`components/integrations/InstalledCommand should match snapshot, not autocomplete, no display_name/description/auto_complete_hint 1`] = `
<div
  className="backstage-list__item"
>
  <div
    className="item-details"
  >
    <div
      className="item-details__row d-flex flex-column flex-md-row justify-content-between"
    >
      <div>
        <strong
          className="item-details__name"
        >
          <FormattedMessage
            defaultMessage="Unnamed Slash Command"
            id="installed_commands.unnamed_command"
          />
        </strong>
        <span
          className="item-details__trigger"
        >
          - /trigger
        </span>
      </div>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__token"
      >
        <FormattedMessage
          defaultMessage="Token: {token}"
          id="installed_integrations.token"
          values={
            Object {
              "token": "testToken",
            }
          }
        />
        <CopyText
          defaultMessage="Copy"
          idMessage="integrations.copy"
          value="testToken"
        />
      </span>
    </div>
    <div
      className="item-details__row"
    >
      <span
        className="item-details__creation"
      >
        <FormattedMessage
          defaultMessage="Created by {creator} on {createAt, date, full}"
          id="installed_integrations.creation"
          values={
            Object {
              "createAt": "1499722850203",
              "creator": "username",
            }
          }
        />
      </span>
    </div>
  </div>
</div>
`;
